--- a/Fortune-pedzindm/views/fortune.haml
+++ b/Fortune-pedzindm/views/fortune.haml
@@ -1,5 +1,11 @@
 !!! 5
+
 %html{:lang => "en"}
 	%head
-	  %title Fortune
-%body
+		%title Fortune
+	%body
+		if (@fortune)
+		.fortune
+			= @fortune
+		%form{:action => "", :method => "get"}
+			%input{:type => "submit", :id => "new_fortune", :value => "New Fortune"}
